# lda_jax

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/lda_jax/: __init__.py
src/lda_jax/experiments/: lda_example.ipynb
src/lda_jax/inference/: sampler.py
src/lda_jax/models/: lda.py
src/lda_jax/utils/: generator.py  process.py
tests/: test_lda.py  test_lda_jax.py
