[tool.poetry]
name = "lda_jax"
version = "0.1.0"
description = "Latent Dirichlet Allocation and other topic models in Jax"
authors = ["Sunrit Chakraborty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
